--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
